--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <script src="colors.js"></script>
     </head>
     <body>
-        <h1><a href="index.html">WEB</a></h1>
+        <h1><a href="/index.html">WEB</a></h1>
         <input type="button" value="night" onclick="
             nightDayHandler(this);
         ">
         <div id="grid">
             <ol>
-                <li><a href="HTML.html">HTML</a></li>
-                <li><a href="CSS.html">CSS</a></li>
-                <li><a href="JavaScript.html">JavaScript</a></li>
+                <li><a href="/HTML.html">HTML</a></li>
+                <li><a href="/CSS.html">CSS</a></li>
+                <li><a href="/JavaScript.html">JavaScript</a></li>
             </ol>
             <div id="article">
                 <h2>CSS</h2>
